# Lar-JEPA

./: ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  VISION_AND_PHILOSOPHY.md  pyproject.toml
DMN/lar/: .gitignore  ARCHITECTURE.md  CITATION.cff  CODE_OF_CONDUCT.md  DMN_TECHNICAL_REPORT.md  IDE_MASTER_PROMPT.md  IDE_PROMPT_TEMPLATE.md  NOTICE  README.md  SECURITY.md  VISION_AND_PHILOSOPHY.md  docker-compose.yml  prompt.txt  pyproject.toml  requirements.txt
DMN/lar/memory/: dreams.json
DMN/lar/tests/: test_core.py  test_llm.py  test_self_correct.py  test_tool.py
lar_jepa/: .cursorrules  .gitignore  ARCHITECTURE.md  IDE_INTEGRATION_PROMPT.md  IDE_MASTER_PROMPT.md  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
lar_jepa/.github/: CODEOWNERS
lar_jepa/.github/workflows/: ci.yml  publish.yml
lar_jepa/changelog/: RELEASE_NOTES_v1.1.1.md  RELEASE_NOTES_v1.1.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.1.md  RELEASE_NOTES_v1.3.2.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.4.1.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.5.1.md  RELEASE_NOTES_v1.6.0.md  RELEASE_NOTES_v1.7.0.md
lar_jepa/docs/: compliance.md  getting-started.md  ide_setup.md  index.md  llms.txt  robots.txt
lar_jepa/docs/api-reference/: addvaluenode.md  batchnode.md  clearerrornode.md  dynamicnode.md  llmnode.md  routernode.md  toolnode.md  topologyvalidator.md  utilities.md
lar_jepa/docs/assets/: extra.css
lar_jepa/docs/case-studies/: red-teaming.md
lar_jepa/docs/compliance/: auditor_guide.md
lar_jepa/docs/core-concepts/: 1-philosophy.md  10-defensive-constraints.md  2-architecture.md  3-audit-log.md  4-core-patterns.md  5-reasoning-models.md  9-metacognition.md
lar_jepa/docs/guides/: deployment.md  integrations.md  litellm_setup.md  multi-agent-orchestration.md  self-correction-loop.md
lar_jepa/examples/: v1_4_showcase.py
lar_jepa/examples/advanced/: 11_map_reduce_budget.py  13_world_model_jepa.py  fractal_polymath.py
lar_jepa/examples/basic/: 1_simple_triage.py  2_reward_code_agent.py  3_support_helper_agent.py  4_fastapi_server.py
lar_jepa/examples/comparisons/: README.md  langchain_firewall_cost.py  langchain_swarm_fail.py  langchain_tree_fail.py
lar_jepa/examples/compliance/: 10_pharma_clinical_trials_hmac.py  11_verify_audit_log.py  1_human_in_the_loop.py  2_security_firewall.py  3_juried_layer.py  4_access_control_agent.py  5_context_contamination_test.py  6_zombie_action_test.py  7_hitl_agent.py  8_hmac_audit_log.py  9_high_risk_trading_hmac.py
lar_jepa/src/lar/: __init__.py  (+8 more)
(+75 files in other folders)
