[tool.poetry]
name = "lar-engine"
version = "1.0.0"
description = "Lár DMN: A Showcase of Cognitive Architectures (Bicameral Memory, Autopoiesis) built on the Lár Engine."
authors = ["Aadithya Vishnu Sajeev <axdithya@snath.ai>", "Vinay S <vinay@snath.ai>"]
maintainers = ["Aadithya Vishnu Sajeev <axdithya@snath.ai>", "Vinay S <vinay@snath.ai>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "lar", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
google-generativeai = "^0.7.2"
rich = "^14.2.0"
google-genai = "^1.50.1"
openai = "^2.8.1"
anthropic = "^0.74.1"
litellm = "^1.80.0"
pydantic = "^2.0.0"
networkx = "^3.0.0"
deepdiff = "^8.6.1"
urllib3 = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
python-dotenv = "^1.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"